@@ -91,10 +91,6 @@ name|assertTrue
 import|;
 end_import
 
-begin_comment
-comment|/**  */
-end_comment
-
 begin_class
 specifier|public
 class|class
@@ -106,8 +102,6 @@ specifier|public
 name|void
 name|testConstructor1
 parameter_list|()
-throws|throws
-name|Exception
 block|{
 name|CayenneRuntimeException
 name|ex
@@ -147,8 +141,6 @@ specifier|public
 name|void
 name|testConstructor2
 parameter_list|()
-throws|throws
-name|Exception
 block|{
 name|CayenneRuntimeException
 name|ex
@@ -189,8 +181,6 @@ specifier|public
 name|void
 name|testConstructor3
 parameter_list|()
-throws|throws
-name|Exception
 block|{
 name|Throwable
 name|cause
@@ -243,8 +233,6 @@ specifier|public
 name|void
 name|testConstructor4
 parameter_list|()
-throws|throws
-name|Exception
 block|{
 name|Throwable
 name|cause
@@ -294,10 +282,110 @@ annotation|@
 name|Test
 specifier|public
 name|void
+name|testConstructorNullMessage
+parameter_list|()
+block|{
+name|Throwable
+name|cause
+init|=
+operator|new
+name|Throwable
+argument_list|()
+decl_stmt|;
+name|CayenneRuntimeException
+name|ex
+init|=
+operator|new
+name|CayenneRuntimeException
+argument_list|(
+literal|null
+argument_list|,
+name|cause
+argument_list|)
+decl_stmt|;
+name|assertSame
+argument_list|(
+name|cause
+argument_list|,
+name|ex
+operator|.
+name|getCause
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|assertEquals
+argument_list|(
+name|CayenneException
+operator|.
+name|getExceptionLabel
+argument_list|()
+operator|+
+literal|"(no message)"
+argument_list|,
+name|ex
+operator|.
+name|getMessage
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|assertNull
+argument_list|(
+name|ex
+operator|.
+name|getUnlabeledMessage
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|CayenneRuntimeException
+name|ex2
+init|=
+operator|new
+name|CayenneRuntimeException
+argument_list|(
+operator|(
+name|String
+operator|)
+literal|null
+argument_list|)
+decl_stmt|;
+name|assertNull
+argument_list|(
+name|ex2
+operator|.
+name|getCause
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|assertEquals
+argument_list|(
+name|CayenneException
+operator|.
+name|getExceptionLabel
+argument_list|()
+operator|+
+literal|"(no message)"
+argument_list|,
+name|ex2
+operator|.
+name|getMessage
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|assertNull
+argument_list|(
+name|ex2
+operator|.
+name|getUnlabeledMessage
+argument_list|()
+argument_list|)
+expr_stmt|;
+block|}
+annotation|@
+name|Test
+specifier|public
+name|void
 name|testThrow1
 parameter_list|()
-throws|throws
-name|Exception
 block|{
 try|try
 block|{
@@ -339,8 +427,6 @@ specifier|public
 name|void
 name|testThrow2
 parameter_list|()
-throws|throws
-name|Exception
 block|{
 try|try
 block|{
@@ -401,8 +487,6 @@ specifier|public
 name|void
 name|testMessageFormatting1
 parameter_list|()
-throws|throws
-name|Exception
 block|{
 name|CayenneRuntimeException
 name|ex
@@ -434,8 +518,6 @@ specifier|public
 name|void
 name|testMessageFormatting2
 parameter_list|()
-throws|throws
-name|Exception
 block|{
 name|Throwable
 name|cause
