@@ -59,6 +59,7 @@ CAY-2425 Modeler: Migrate DB Direction field is locked if no option was selected
 CAY-2427 Modeler: Undo throws exception
 CAY-2429 Generate classes: Invalid template type: EMBEDDABLE_SINGLE_CLASS
 CAY-2430 Modeler: Redo throws NPE
+CAY-2436 NPE in CayenneRuntimeException constructor
 
 ----------------------------------
 Release: 4.1.M1
